# muses_driver

./: .gitignore  Cargo.toml  README.md
assets/: buttons.maxpat  config.json  encoders.maxpat  farm1.ai  farm1_cutout.ai  musesXYZ_logo.ai  muses_circles_encoder_tops.ai  muses_instrument.ino  osc_mapper.maxpat  osc_to_midi.maxpat
assets/liveTestSet Project/: liveTestSet.als
assets/liveTestSet Project/Ableton Project Info/: Project8_1.cfg
src/: bin.rs  lib.rs  midi.rs  midiports.rs  orac.rs  orac_serial_device.rs  orac_term_display.rs  osc.rs  osc_utils.rs  serial_device.rs  transport.rs  transport_rec.rs
statusBar/MusesInterface/: AppDelegate.swift  Info.plist  ViewController.swift  wrapper.c  wrapper.h
statusBar/MusesInterface.xcodeproj/: project.pbxproj
statusBar/MusesInterface.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
statusBar/MusesInterface.xcodeproj/project.xcworkspace/xcuserdata/br-gaster.xcuserdatad/: UserInterfaceState.xcuserstate
statusBar/MusesInterface.xcodeproj/xcuserdata/br-gaster.xcuserdatad/xcschemes/: xcschememanagement.plist
statusBar/MusesInterface/Assets.xcassets/AppIcon.appiconset/: Contents.json
statusBar/MusesInterface/Assets.xcassets/StatusBarButtonImage.imageset/: Contents.json
statusBar/MusesInterface/Base.lproj/: Main.storyboard
statusBar/MusesInterfaceTests/: MusesInterfaceTests.swift
statusBar/MusesInterfaceUITests/: MusesInterfaceUITests.swift
