[package]
name = "muses_driver"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

[lib]
name = "muses_driver"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "muses_driver_cmd"
path = "src/bin.rs"

[dependencies]
serialport = "3.3.0"
log = "0.4"
simple_logger = "1.3.0"
rosc = "0.1.6"
muses_sensel = { path = "../muses_sensel" }