[package]
name = "muses_driver"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

[lib]
name = "muses_driver"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "muses_driver_cmd"
path = "src/bin.rs"

[[bin]]
name = "muses_orac_driver"
path = "src/orac.rs"

[[bin]]
name = "muses_midi_ports"
path = "src/midiports.rs"

[dependencies]
serialport = "3.3.0"
log = "0.4"
simple_logger = "1.3.0"
rosc = "0.1.6"
midir = "0.5.0"
muses_sensel = { path = "../muses_sensel" }
serde_json = "1.0.40"
serde = "1.0.101"
serde_derive = "1.0.101"
getopts = "0.2"
stderrlog = "0.4.1"
termion = "1.5.3"
num = "0.2.0"

# libc = "0.2.65"
# net2 = "0.2.33"